--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://dmiweb.github.io/class-based-component/",
   "name": "class-based-component",
   "version": "0.1.0",
   "private": true,
